# celinalg

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: CreateHelper.cmake  CreateUtil.cmake  TargetHardCompilation.cmake  Testing.cmake
helpers/: compile.sh  math.cpp
include/public/: celinalg.hpp  linalg.hpp
include/public/celinalg/: common_type.hpp  forward.hpp  math.hpp  matrix.hpp  matrix.hxx  matrix_views.hpp  number.hpp  number_type.hpp  numeric_traits.hpp  operation.hpp  quaternion.hpp  traits.hpp  utils.hpp  vector.hpp  vector.hxx  vector_view.hpp
include/public/linalg/: forward.hpp  math.hpp  matrix.hpp  matrix.hxx  matrix_views.hpp  operation.hpp  quaternion.hpp  traits.hpp  utils.hpp  vector.hpp  vector.hxx  vector_view.hpp
src/: vector.cpp
test/: mat.cpp  mat2.cpp  matrix.cpp  vector.cpp
